.metadata/.plugins/org.eclipse.cdt.ui/MatrixB.build.log
٢٢:٣٩:٣٩ **** Incremental Build of configuration Debug for project MatrixB ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Matrix.o" "..\\src\\Matrix.c" 
..\src\Matrix.c:13:6: warning: return type of 'main' is not 'int' [-Wmain]
   13 | void main ()
      |      ^~~~
..\src\Matrix.c:33:1: error: expected identifier or '(' before '}' token
   33 | }
      | ^

٢٢:٣٩:٣٩ Build Failed. 1 errors, 1 warnings. (took 280ms)

